
* Memcheck:

  - Support for --xtree-memory and 'xtmemory [<filename>]>'.

* Massif:

  - Support for --xtree-memory and 'xtmemory [<filename>]>'.

  - For some workloads (typically, for big applications), Massif
    memory consumption and CPU consumption decreases significantly.

* Helgrind:

  - Support for --xtree-memory and 'xtmemory [<filename>]>'.


* ==================== OTHER CHANGES ====================

* For Valgrind developers: in an outer/inner setup, the outer Valgrind
  will append the inner guest stacktrace to the inner host stacktrace.
  This helps to investigate the errors reported by the outer, when they
  are caused by the inner guest program (such as an inner regtest).
  See README_DEVELOPERS for more info.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather
than mailing the developers (or mailing lists) directly -- bugs that
are not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
  https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.

348616  Wine/valgrind: noted but unhandled ioctl 0x5390 [..] (DVD_READ_STRUCT)
352767  Wine/valgrind: noted but unhandled ioctl 0x5307 [..] (CDROMSTOP)
371412  Rename wrap_sys_shmat to sys_shmat like other wrappers
371869  support '%' in symbol Z-encoding
371916  execution tree xtree concept
372120  c++ demangler demangles symbols which are not c++
372504  Hanging on exit_group
372600  process loops forever when fatal signals are arriving quickly



Release 3.12.0 (20 October 2016)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.12.0 is a feature release with many improvements and the usual
collection of bug fixes.
